--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,13 +1,39 @@
-<h1>New Booking</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>The Booking Oasis</title>
+  <%= stylesheet_link_tag 'stile/styles', media: 'all' %>
+</head>
+<body>
 
-<%= form_with(model: @booking, url: room_bookings_path(@room), local: true) do |form| %>
-  <%= form.label :check_in_date %>
-  <%= form.date_field :check_in_date %>
+<header>
+  The Booking Oasis
+</header>
 
-  <%= form.label :check_out_date %>
-  <%= form.date_field :check_out_date %>
+<main>
+  <h1>New Booking</h1>
 
-  <%= form.submit 'Book' %>
-<% end %>
+  <%= form_with(model: @booking, url: room_bookings_path(@room), local: true) do |form| %>
+    <div class="form-field">
+      <%= form.label :check_in_date %>
+      <%= form.date_field :check_in_date %>
+    </div>
 
-<%= link_to 'Back', room_path(@room) %>
+    <div class="form-field">
+      <%= form.label :check_out_date %>
+      <%= form.date_field :check_out_date %>
+    </div>
+
+    <div class="form-actions">
+      <%= form.submit 'Book', class: 'button' %>
+      <%= link_to 'Back', room_path(@room), class: 'button' %>
+    </div>
+  <% end %>
+</main>
+
+<footer>
+  Created by "Team 5"
+</footer>
+
+</body>
+</html>
