--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,16 +1,20 @@
-<h1><%= @room.name %> Room</h1>
+<div class="room-details">
+  <h1><%= @room.name %> Room</h1>
 
-<p>Area: <%= @room.area %> sq.m</p>
-<p>Balcony: <%= @room.balcony ? 'Yes' : 'No' %></p>
-<p>TV: <%= @room.tv ? 'Yes' : 'No' %></p>
-<p>Air Conditioner: <%= @room.air_conditioner ? 'Yes' : 'No' %></p>
+  <p>Area: <%= @room.area %> sq.m</p>
+  <p>Balcony: <%= @room.balcony ? 'Yes' : 'No' %></p>
+  <p>TV: <%= @room.tv ? 'Yes' : 'No' %></p>
+  <p>Air Conditioner: <%= @room.air_conditioner ? 'Yes' : 'No' %></p>
+</div>
 
-<h2>Photos</h2>
-<% @room_photos.each do |photo| %>
-  <div>
-    <%= image_tag photo.photo.url(:medium) %>
-    <%= link_to 'Delete', room_photo_path(photo), method: :delete, data: { confirm: 'Are you sure you want to delete this photo?' } %>
-  </div>
-<% end %>
+<div class="room-photos">
+  <h2>Photos</h2>
+  <% @room_photos.each do |photo| %>
+    <div class="photo">
+      <%= image_tag photo.photo.url(:medium) %>
+      <%= link_to 'Delete', room_photo_path(photo), method: :delete, data: { confirm: 'Are you sure you want to delete this photo?' }, class: 'delete-link' %>
+    </div>
+  <% end %>
 
-<%= link_to 'Add Photo', add_photo_room_path(@room) %>
+  <%= link_to 'Add Photo', add_photo_room_path(@room), class: 'add-photo-link' %>
+</div>
