--- a/app/views/stile/styles.css
+++ b/app/views/stile/styles.css
@@ -1,51 +1,33 @@
 /* styles.css */
-body {
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
 
-header {
-    background-color: #f4a42e;
-    color: #fff;
+.add-photo-form {
     padding: 20px;
+    background-color: #f5f5f5;
+    border-radius: 10px;
     text-align: center;
-    font-size: 24px;
 }
 
-main {
-    padding: 20px;
+.add-photo-form h1 {
+    color: #333;
 }
 
-footer {
-    background-color: #000;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+.photo-field {
+    margin-bottom: 10px;
 }
 
-.button {
-    background-color: #f4a42e;
-    color: #fff;
+.submit-button {
+    margin-top: 10px;
+}
+
+.submit-button input[type="submit"] {
     padding: 10px 20px;
-    text-decoration: none;
-    display: inline-block;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
 
-.form-field {
-    margin-bottom: 20px;
+.submit-button input[type="submit"]:hover {
+    background-color: #0056b3;
 }
-
-.form-actions {
-    margin-top: 20px;
-}
-
-.form-actions .button {
-    margin-right: 10px;
-}
-
